--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -42,7 +42,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script>
-      window.apiHost = "https://sift.seanmmcquaid.com";
+      window.apiHost = "https://sift.katiejduane.com";
     </script>
   </body>
 </html>
